Lighten UI backgrounds and borders
Using variables so can see where changes were made and to
easily change in the future.

Removed bootstrap navbar-inverse to use standard bootstrap
navbar styles.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,7 +45,7 @@
 body {
   @import "bootstrap/_variables";
   $font-family-base: "Lucida Grande", Verdana, Geneva, Arial, sans-serif;
-  $body-bg: #eee;
+  $body-bg: #fff;
 
   margin: 0;
   font-family: $font-family-base;
