--- a/app/assets/stylesheets/tracks.css.scss
+++ b/app/assets/stylesheets/tracks.css.scss
@@ -1,4 +1,6 @@
 .navbar {
+  background: #fff;
+  border-bottom: 1px solid #eee;
   /* Shows the number of undone next action */
   .badge {
     color: #fff;
