--- a/app/assets/stylesheets/legacy.css.scss
+++ b/app/assets/stylesheets/legacy.css.scss
@@ -1,3 +1,8 @@
+$container-header-color: #eee;
+$container-border-color: #eee;
+$form-background-color: #eee;
+$message-background-color: #ffffed;
+
 .needsreview {
     background: #ffC;
 }
@@ -241,18 +246,18 @@ a.show_successors:hover, a.link_to_successors:hover {background-image: image-url
 
 .container {
     padding: 0px 5px 0px 5px;
-    border: 1px solid #999;
+    border: 1px solid $container-border-color;
     margin: 0px 0px 15px 0px;
     background: #fff;
     border-radius: 5px;
 }
 
 .completed {
-    background: #eee;
+    background: #fff;
 }
 
 .container h2 {
-    background: #ccc;
+    background: $container-header-color;
     padding: 5px;
     margin-top: 0px;
     margin-left: -5px;
@@ -341,8 +346,8 @@ a.icon_delete_dep:hover {width: 10px; background-color: black;}
 
 /* deleting dependency from edit form of a todo */
 form.edit_todo_form {
-    a.icon_delete_dep:hover { background-color: #cccccc;}
-    a:hover img.icon_delete_dep { background-color: #cccccc; }
+    a.icon_delete_dep:hover { background-color: #eee;}
+    a:hover img.icon_delete_dep { background-color: #eee; }
 }
 
 /* delete button for deleting a dep from the tree of a todo */
@@ -641,7 +646,7 @@ Same format as traffic lights */
 
 .info {
     color: #fff;
-    background: #CCC;
+    background: #eee;
     border: 1px solid #999;
     padding: 5px;
     text-align: center;
@@ -700,7 +705,7 @@ li {
 }
 
 .edit-form {
-    background: #ccc;
+    background: #eee;
     padding: 0 10px;
     border-top: 1px solid #999;
     border-bottom: 1px solid #999;
@@ -785,7 +790,7 @@ div.project_settings {
 
 /* Form elements */
 form {
-    border: 1px solid #CCC;
+    border: 1px solid #eee;
     padding: 10px;
     margin: 0px;
 }
@@ -815,8 +820,8 @@ form {
     background: #ddd;
     width: 270px;
     padding: 5px 10px;
-    background-color: #000;
-    color: #eee;
+    background-color: $form-background-color;
+    color: #000;
     border-radius: 5px;
 }
 
@@ -871,7 +876,7 @@ input#go_to_project, input#context_hide {
 
     .Date { width:89%; }
 
-    a.date_clear:hover { background: #CCCCCC; }
+    a.date_clear:hover { background: #eee; }
 
     .tag_list_label { clear:both; }
 
@@ -904,7 +909,6 @@ form.button-to {
 }
 
 label {
-    font-weight: bold;
     padding: 0px 0px;
 }
 
@@ -948,7 +952,7 @@ input, select, textarea {
 
 div.message {
     margin: 5px 0px;
-    background: #FAF4B5;
+    background: $message-background-color;
     padding: 2px;
 }
 
@@ -1281,7 +1285,7 @@ div.integrations {
         margin-top:40px;
         padding-top:20px;
         margin-bottom:10px;
-        border-top:1px solid #ccc;
+        border-top:1px solid #eee;
     }
 
     p, li { font-size:1.0em; }
