--- a/app/assets/stylesheets/legacy.css.scss
+++ b/app/assets/stylesheets/legacy.css.scss
@@ -3,6 +3,8 @@ $container-border-color: #eee;
 $form-background-color: #eee;
 $message-background-color: #ffffed;
 
+$primary-color: #1725AA;
+
 .needsreview {
     background: #ffC;
 }
@@ -80,15 +82,15 @@ p {
 }
 
 a, a:link, a:active, a:visited {
-    color: #cc3334;
+    color: $primary-color;
     text-decoration: none;
     padding-left: 1px;
     padding-right: 1px;
 }
 
-a:hover {
-    color: #fff;
-    background-color: #cc3334;
+.bootstrap a:hover, a:hover {
+    color: $primary-color;
+    text-decoration: underline;
 }
 
 h1 {
@@ -405,16 +407,6 @@ input.item-checkbox {
     margin-left: 25px;
     width: 40px;
     border-top: 1px solid #999;
-}
-
-a.footer_link {
-    color: #cc3334;
-    font-style: normal;
-
-    &:hover {
-        color: #fff;
-        background-color: #cc3334 !important;
-    }
 }
 
 /* preferences */
