Simplify project settings display
- Change edit settings link to cog icon
- Remove default tags and default contexts info
- Use icons to show if the project is hidden or completed

--- a/app/assets/stylesheets/legacy.css.scss
+++ b/app/assets/stylesheets/legacy.css.scss
@@ -774,10 +774,16 @@ div.project_settings {
     margin-top: 0px;
     margin-left: -5px;
     margin-right: -5px;
+    text-align: right;
     color: #666;
     font-style: italic;
-    font-size: 10px;
+    font-size: 18px;
     font-weight: normal;
+}
+
+div.project_settings a.icon {
+    float: none;
+    color: #666;
 }
 
 #project-next-prev {
