Move next & previous project links to end of page
To remove distraction

Also:
- Remove project name and repace with chevron icon
- Make light gray

--- a/app/assets/stylesheets/legacy.css.scss
+++ b/app/assets/stylesheets/legacy.css.scss
@@ -788,6 +788,16 @@ div.project_settings a.icon {
 
 #project-next-prev {
     text-align:right;
+    color: #eee;
+}
+
+#project-next-prev a {
+    color: #eee;
+}
+
+#project-next-prev a:hover {
+    color: $primary-color;
+    text-decoration: none;
 }
 
 /* Form elements */
