--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,7 +4,9 @@
   </div>
   <%= render :partial => 'project_state_group', :object => @active_projects, :locals => { :state => 'active'} %>
   <%= render :partial => 'project_state_group', :object => @hidden_projects, :locals => { :state => 'hidden'} %>
-  <%= render :partial => 'project_state_group', :object => @completed_projects, :locals => { :state => 'completed', :total_count => @completed_count} %>
+  <div class="light-link pull-right">
+    <%= link_to('View Completed Projects', done_projects_path) %>
+  </div>
 </div>
 
 <div id="input_box">
