--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,6 @@
 <div class="bootstrap">
   <div class="footer">
-    <%= t('footer.send_feedback', :version => TRACKS_VERSION) %>
-    <span class="footer-line">
+    <span class="footer-line light-link">
       <a href="https://github.com/TracksApp/tracks/issues"><%= t('common.bugs')%></a> |
       <a href="https://github.com/TracksApp/tracks/wiki"><%= t('common.wiki')%></a> |
       <a href="http://groups.google.com/group/TracksApp"><%= t('common.mailing_list')%></a> |
