--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -18,7 +18,7 @@ img {
 
 #input_box, #footer, .big-box, .refresh, .badge, h1, .icon,
 .defer-container, .menu_sort, .position, .buttons, .sf-item-menu,
-.container_toggle, .grip, .show_notes, .recurring_icon, #project-next-prev,
+.container_toggle, .grip, .show_notes, #project-next-prev,
 .project_settings, .link_in_container_header {
     display:none;
 }
