--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -34,7 +34,7 @@ cache [todo, current_user.date.strftime("%Y%m%d"), @source_view, current_user.pr
       <%= grip_span(todo) %>
       <div class="description<%= staleness_class( todo ) %>">
         <%= date_span(todo) -%>
-        <%= project_and_context_links( todo, parent_container_type, :suppress_context => suppress_context, :suppress_project => suppress_project ) %>
+        <!-- <%= project_and_context_links( todo, parent_container_type, :suppress_context => suppress_context, :suppress_project => suppress_project ) %> -->
         <span class="todo.descr"><%= h todo.description %></span>
         <%= recurring_todo_icon_link(todo) if todo.from_recurring_todo? %>
         <%= tag_list(todo) %>
